--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^6.1.4",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
@@ -23,6 +24,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
+    "next-cloudinary": "^6.17.5",
     "react": "^18",
     "react-dom": "^18",
     "zustand": "^4.4.7"
